Prevent jumps on navigation, make about font larger

--- a/app/views/styles/about.styl
+++ b/app/views/styles/about.styl
@@ -21,6 +21,7 @@
 
         p
           padding-bottom 29px
+          font-size: 16px;
 
     .ecology-description
       margin-top: 117px;
@@ -29,6 +30,7 @@
       p
         color #fff
         padding-bottom 13px
+        font-size: 16px;
 
     .product-reviews
       margin-top 78px
